gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-ffi_const.rs
#![crate_type = "lib"]

extern {
    #[ffi_const] // { dg-error ".E0658." "" { target *-*-* } }
    pub fn foo();
}

